Cleaning up and releasing 3.0.0